--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,10 @@
 .env.production.local
 
 # teamPhotos
-/public/teamPhotos
+/public/teamPhotos/
+
+#config
+**/config
 
 npm-debug.log*
 yarn-debug.log*
