--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-ga": "^3.3.0",
     "react-icons": "^3.10.0",
     "react-responsive": "^8.0.3",
     "react-router-dom": "^5.1.2",
