--- a/package.json
+++ b/package.json
@@ -7,17 +7,18 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^5.2.0",
     "firebase": "^7.17.1",
-    "node-sass": "^7.0.0",
-    "react": "^16.13.1",
-    "react-bootstrap": "^1.0.0",
-    "react-dom": "^16.13.1",
+    "moment": "^2.29.4",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
+    "react-dom": "^18.2.0",
     "react-ga": "^3.3.0",
     "react-icons": "^3.10.0",
     "react-responsive": "^8.0.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "^5.0.1",
+    "sass": "^1.54.5"
   },
   "scripts": {
     "start": "react-scripts start",
